--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,13 @@
 {
   "name": "Elixir App",
   "short_name": "Elixier",
-  "start_url": "/",
+  "start_url": ".",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#007bff",
   "icons": [
     {
-      "src": "/icons/icon.png",
+      "src": "icons/icon.png",
       "sizes": "192x192",
       "type": "image/png"
     }
